force-app/main/default/objects/Appointment_Comm_Config__mdt/Appointment_Comm_Config__mdt.object-meta.xml
<CustomObject>
    <description>Org-level configuration for appointment confirmation and reminder email/SMS.</description>
    <label>Appointment Comm Config</label>
    <pluralLabel>Appointment Comm Configs</pluralLabel>
</CustomObject>