force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Auto_Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Send Reminder</label>
    <type>Checkbox</type>
</CustomField>