force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Email_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Enabled</label>
    <type>Checkbox</type>
</CustomField>