force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Reminder_Hours_Before__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Hours_Before__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Reminder Hours Before</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>