force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SMS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>