force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Twilio_Account_Sid__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_Sid__c</fullName>
    <label>Twilio Account Sid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>