force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Twilio_From_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_From_Number__c</fullName>
    <label>Twilio From Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>