force-app/main/default/objects/Appointment_Comm_Config__mdt/fields/Twilio_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Named_Credential__c</fullName>
    <label>Twilio Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>